fix dark mode

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -33,7 +33,7 @@
   }
 
   @media (prefers-color-scheme: dark) {
-    .nav-gradient.adaptive {
+    .nav-gradient {
       background: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(17, 24, 39, 0.9));
     }
   }
